# deep_pipe

./: .gitattributes  .gitignore  .gitmodules  LICENSE  MANIFEST.in  README.md  asv.conf.json  experiment conventions.md  paths.json  pylintrc  pyproject.toml  pytest.ini  release.sh  requirements.txt  run_tests.sh  setup.py
benchmarks/: benchmark_patches_grid.py  benchmarks.py
config_examples/: amir.config.json  brats.augm.segm.config.json  brats.base.config  brats.config  brats.config.json  brats.deepmedic.config  brats.deepmedic.stable.config  brats.deepmedict.config  brats.msegm.config.json  brats.quantiles.config  brats.quantiles_coordinates.config  brats.segm.config  brats.segm.config.json  brats.tnet.config  brats.tnet.downsample.config  brats_base.config  brats_deepmedic.config  brats_quantiles.config  brats_short.config  brats_tnet.config  brats_tnet_downsample.config  iitp_paths  isles.config  isles.config.json  isles15.augm.config  isles15.both.config  isles15.config  isles15.coregister.config  isles15.spacial.config  multimodal.assets.config  multimodal.config  proto.config  stable.assests.config  stable.config  stable.deepmedic.config  torch.config  volumes  wmh.nhw17.config.json  wmh17.config  wmhs.config.json
docs/: Makefile  build_docs.sh  conf.py  dpipe.batch_iter.rst  dpipe.batch_predict.rst  dpipe.commands.rst  dpipe.config.rst  dpipe.dataset.rst  dpipe.experiment.flat.rst  dpipe.experiment.rst  dpipe.im.rst  dpipe.io.rst  dpipe.itertools.rst  dpipe.layers.rst  dpipe.medim.rst  dpipe.model.rst  dpipe.model_core.layers_torch.rst  dpipe.model_core.rst  (+11 more)
(+832 files in other folders)
